--- a/views/404.ejs
+++ b/views/404.ejs
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="error-page">
         <h1>404 - Page Not Found</h1>
-        <p><%= message || 'The page you are looking for does not exist.' %></p>
+        <p>The page you are looking for does not exist.</p>
         <a href="/" class="btn btn-primary">Go Home</a>
       </div>
     </div>
