--- a/views/error.ejs
+++ b/views/error.ejs
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="error-page">
         <h1>Error</h1>
-        <p><%= message || 'An error occurred.' %></p>
+        <p>An error occurred. Please try again later.</p>
         <a href="/" class="btn btn-primary">Go Home</a>
       </div>
     </div>
